--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,11 @@
     {% load static %}
 
     {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> {% endcomment %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">  <!-- Custom styles override Bootstrap -->
 
     <!-- Custom CSS (Optional) -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body class="bg-light text-center">
+<body class="{% block body_class %}{% endblock %} text-center">
 
     <main class="container mt-5">
         {% block content %}
@@ -27,5 +26,9 @@
     
     <!-- Bootstrap JS (optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    {% comment %} user-dropdown.js (static) {% endcomment %}
+    <script src="{% static 'js/user-dropdown.js' %}"></script>
+
 </body>
 </html>
